crates/eure-macros/tests/compile_fail/object_key_invalid_variant_attr.rs
use eure::ObjectKey;

#[derive(ObjectKey)]
enum Bad {
    #[eure(unknown_option = "value")]
    A,
}

fn main() {}
